--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,8 @@ body {
 .filters,
 .work-images,
 .team-photos,
-.projects {
+.projects,
+.lorem-list {
     list-style: none;
 }
 .studio {
@@ -108,21 +109,21 @@ li>.click {
 
     color: #ffffff;
 }
-.lorem-ipsum {
-    font-size: 14px;
+.lorem-ipsum { 
     letter-spacing: 0.03em;
     background-color: #ffffff;
 }
 .lorem {
+    font-size: 14px;
     font-weight: 700;
     line-height: 1.14;
     text-transform: uppercase;
 }
 .lorem-text {
+    font-size: 14px;
     line-height: 1.71;
 
     color: #757575;
-    list-style: none;
 }
 .lorem-text::first-letter,
 .headline2::first-letter,
